# simple_login

./: LICENSE  README.md  app.py  pyproject.toml  run.sh
scripts/: 00_init_users.py
static/: index.html
