[tool.poetry]
name = "simple_login"
version = "0.1.0"
description = ""
authors = ["Nitesh Singh Jaswal <nitesh1511@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
bcrypt = "^4.1.2"
uvicorn = "^0.27.1"
pydantic-settings = "^2.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
